--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
  <p> Lesedii is a 21 year old, self described "musical pixie".
         Her love for the music she listenes to creates an open chanel for you to know what makes her day what it is.
         Is it amazing? is it boring or maybe mid? you tell us, we'll confirm...LET'S PLAY (music)</p>
-<p>dont judge, dont expect to hear <a href="https://youtu.be/KAFNIL7I33o">HIM!!</a>
+<p>dont judge, dont expect to hear <a href="https://youtu.be/KAFNIL7I33o">HIM!!</a> but trust, the vibes are still there</p>
+
+<p>first order of business, today's song was a repeat play song for me christmas morning of 2024. It's chilled, relaxed vibe that's
+heavily centered around love, felt perfect for a chilly morning getting ready to be loving the family in calmness.</p>
+	<img>
 		
 </body>
 </html>
