--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <title>Lesedii's song of the day</title>
 </head>
@@ -7,14 +7,14 @@
 
     <h1>Come hear what's between Lesedii's ears</h1>
 	
- <p> Lesedii is a 21 year old, self described "musical pixie".
-        Her love for the music she listenes to creates an open chanel for you to know what makes her day what it is.
-        Is it amazing? is it boring or maybe mid? you tell us, we'll confirm...LET'S PLAY (music)</p>
+ <p> Lesedii is a 21 year old, self described "musical pixie".<br>Her love for the music she listenes to creates an open chanel for you to know what makes her day what it is.<br>Is it amazing? is it boring or maybe mid? you tell us, we'll confirm...LET'S PLAY (music)</p>
 <p>dont judge, dont expect to hear <a href="https://youtu.be/KAFNIL7I33o">HIM!!</a> but trust, the vibes are still there</p>
 
-<p>first order of business, today's song was a repeat play song for me christmas morning of 2024. It's chilled, relaxed vibe that's
-heavily centered around love, felt perfect for a chilly morning getting ready to be loving the family in calmness.</p>
-	<img src=
+<p>first order of business, today's song was a repeat play song for me christmas morning of 2024. It's chilled, relaxed vibe that's<br>heavily centered around love, felt perfect for a chilly morning getting ready to be loving the family in calmness.</p>
+	<img src="Aaron.jpg" alt="Aaron" width="104" height="142">
+
+<audio autoplay loop>
+	<source src=
 		
 </body>
 </html>
