--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <p>first order of business, today's song was a repeat play song for me christmas morning of 2024. It's chilled, relaxed vibe that's<br>heavily centered around love, felt perfect for a chilly morning getting ready to be loving the family in calmness.</p>
 	<img src="Aaron.jpg" alt="Aaron" width="104" height="142">
 
-<audio autoplay loop>
+<audio controls>
 	<source src="Aaron May - In Love (Audio).mp3" type="audio/mpeg">
 </audio>
 		
