--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <p>first order of business, today's song was a repeat play song for me christmas morning of 2024. It's chilled, relaxed vibe that's<br>heavily centered around love, felt perfect for a chilly morning getting ready to be loving the family in calmness.</p>
 	<img src="Aaron.jpg" alt="Aaron" width="104" height="142">
 
-<audio controls>
+<audio autoplay loop>
 	<source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Aaron%20May%20-%20In%20Love%20(Audio).mp3" type="audio/mpeg">
 </audio>
 		
