--- a/index.html
+++ b/index.html
@@ -55,12 +55,17 @@
 
 <div>
     <h5>TODAY'S SONG</h5>
-    <p>I wanna describe today's song as "valentine's leftovers." This song to me reminds me that you don't really need a marked date on<br>the calendar to remind you to show some love
-    Today's song should have you trying to respark February the 14th's spark, Enjoy!</p>
+    <p></p>
     
 </div>
 
 <div>
+    <h6>16.02.2025</h6>
+    <img src="beyonce.jpeg" alt="cover art for fortunate carriages">
+    <audio controls loop>
+        <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Beyonce%20&%20Maxwell%20-%20Fortunate%20Carriages%20(A%20JAYBeatz%20Mashup)%20%23HVLM.mp3" type="audio/mpeg">
+    </audio>
+        
     <h6>15.02.2026</h6>
     <img src="Aaron.jpg" alt="Cover art for Aaron May's song 'In Love'">
     <audio controls loop>
