--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lesedii's Song of the Day</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap'); /* Retro Typewriter Font */
+        @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
 
         body {
             background-color: black;
@@ -55,7 +55,10 @@
 
 <div>
     <h5>TODAY'S SONG</h5>
-    <p></p>
+    <p>Fresh into the week and i feel like a BITCH! Soooo enough of the lovey dovey stuff, i have too much work to do and nothing's funny<br>it's time to tap it, lock in. This song is exactly what the doctor ordered, get over it with me.</p>
+    <img src="lucki.png" alt="cover art for ofc you wont">
+    <audio controls loop>
+        <source src=
     
 </div>
 
