--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
     <p>Fresh into the week and i feel like a BITCH! Soooo enough of the lovey dovey stuff, i have too much work to do and nothing's funny<br>it's time to tap it, lock in. This song is exactly what the doctor ordered, get over it with me.</p>
     <img src="lucki.png" alt="cover art for ofc you wont">
     <audio controls loop>
-        <source src=
+        <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/LUCKI%20-%20OF%20COURSE%20YOU%20WON%E2%80%99T%20%5BaEYCWPcpEys%5D.mp3" type="audio/mpeg">
+    </audio>
     
 </div>
 
