--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
         <p>Don't judge, don't expect to hear <a href="https://youtu.be/KAFNIL7I33o">HIM!!</a> but trust, the vibes are still there.</p>
     </div>
     
-    <h3>LOG: WHAT'S ON AUX?</h3>
+    <h2>LOG: WHAT'S ON AUX?</h2>
 
     <div>
         <h4>TODAY'S SONG</h4>
-        <p>Fresh into the week and i feel like a BITCH! Soooo enough of the lovey dovey stuff, i have too much work to do and nothing's funny<br>it's time to tap it, lock in. This song is exactly what the doctor ordered, get over it with me.</p>
+        <p>Fresh into the week and i feel like a BITCH! Soooo enough of the lovey dovey stuff, i have too much work to do and nothing's funny<br>it's time to tap in, lock in. This song is exactly what the doctor ordered, get up with me.</p>
         <img src="lucki.png" alt="cover art for ofc you wont" class="main-image">
         <audio controls loop>
             <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/LUCKI%20-%20OF%20COURSE%20YOU%20WON%E2%80%99T%20%5BaEYCWPcpEys%5D.mp3" type="audio/mpeg">
