--- a/index.html
+++ b/index.html
@@ -85,15 +85,23 @@
 
     <div>
         <h4>TODAY'S SONG</h4>
-        <p>Fresh into the week and i feel like a BITCH! Soooo enough of the lovey dovey stuff, i have too much work to do and nothing's funny<br>it's time to tap in, lock in. This song is exactly what the doctor ordered, get up with me.</p>
-        <img src="lucki.png" alt="cover art for ofc you wont" class="main-image">
+        <p>Today i woke up in my true element, meaning my inner child was up and ready to go outside(i waas just ready to be out the house, even if it meant going to school)<br>Emph4sis hold my sanity and take me to lala land.<br>Basically this song makes me feel like a cartoon character</p>
+        <img src= alt=>
         <audio controls loop>
-            <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/LUCKI%20-%20OF%20COURSE%20YOU%20WON%E2%80%99T%20%5BaEYCWPcpEys%5D.mp3" type="audio/mpeg">
+            <source src= type="audio/mpeg">
         </audio>
     </div>
 
     <h4>Previous Songs</h4>
     <div class="song-log">
+        <div class="song-entry">
+            <h4>17.02.2025</h4>
+            <img src="lucki.png" alt="cover art for ofc you wont" class="main-image">
+            <audio controls loop>
+                <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/LUCKI%20-%20OF%20COURSE%20YOU%20WON%E2%80%99T%20%5BaEYCWPcpEys%5D.mp3" type="audio/mpeg">
+            </audio>
+        </div>
+        
         <div class="song-entry">
             <h4>16.02.2025</h4>
             <img src="beyonce.jpeg" alt="cover art for fortunate carriages" class="small-image">
