--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <p>Today i woke up in my true element, meaning my inner child was up and ready to go outside(i waas just ready to be out the house, even if it meant going to school)<br>Emph4sis hold my sanity and take me to lala land.<br>Basically this song makes me feel like a cartoon character</p>
         <img src="emph4sis.jpeg" alt="cover art for do it">
         <audio controls loop>
-            <source src= type="audio/mpeg">
+            <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Do%20it.mp3" type="audio/mpeg">
         </audio>
     </div>
 
