--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <div>
         <h4>TODAY'S SONG</h4>
         <p>Today i woke up in my true element, meaning my inner child was up and ready to go outside(i waas just ready to be out the house, even if it meant going to school)<br>Emph4sis hold my sanity and take me to lala land.<br>Basically this song makes me feel like a cartoon character</p>
-        <img src="emph4sis.jpeg" alt="cover art for do it">
+        <img src="emph4sis.jpeg" alt="cover art for do it" class="main-image">
         <audio controls loop>
             <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Do%20it.mp3" type="audio/mpeg">
         </audio>
@@ -96,7 +96,7 @@
     <div class="song-log">
         <div class="song-entry">
             <h4>17.02.2025</h4>
-            <img src="lucki.png" alt="cover art for ofc you wont" class="main-image">
+            <img src="lucki.png" alt="cover art for ofc you wont" class="small-image">
             <audio controls loop>
                 <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/LUCKI%20-%20OF%20COURSE%20YOU%20WON%E2%80%99T%20%5BaEYCWPcpEys%5D.mp3" type="audio/mpeg">
             </audio>
