--- a/index.html
+++ b/index.html
@@ -74,16 +74,23 @@
 
     <div>
         <h4>TODAY'S SONG</h4>
-        <p>Today I woke up in my true element, meaning my inner child was up and ready to go outside...<br>
-        Basically, this song makes me feel like a cartoon character.</p>
-        <img src="emph4sis.jpeg" alt="cover art for do it" class="main-image">
+        <p>welp, todays song was interrupted by some stupid shii. So today's song is heavily inspired by that. Here's a song about healing, revenge and prosperity.</p>
+        <img src="DBD bash.jpeg" alt="cover art for darkest before dawn" class="main-image">
         <audio controls>
-            <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Do%20it.mp3" type="audio/mpeg">
-        </audio>
+            <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Bashfortheworld%20-%20Darkest%20before%20Dawn.mp3" type="audio/mpeg">
+        </audio>   
     </div>
 
     <h4>Previous Songs</h4>
     <div class="song-log">
+        <div class="song-entry">
+            <h4>18.02.2025</h4>
+            <img src="emph4sis.jpeg" alt="cover art for do it" class="small-image">
+            <audio controls>
+                <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Do%20it.mp3" type="audio/mpeg">
+            </audio>
+        </div>
+        
         <div class="song-entry">
             <h4>17.02.2025</h4>
             <img src="lucki.png" alt="cover art for ofc you wont" class="small-image">
