--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         }
 
         header-banner {
-            background: url('background.png') no-repeat center center;
+            background: url("background.png") no-repeat center center;
             background-size: cover;
             padding: 40px;
             border-radius: 15px;
