--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+1<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -13,14 +13,14 @@
             padding: 20px;
         }
 
-        header-banner {
+        .header-banner {
             background: url("background.png") no-repeat center center;
             background-size: cover;
             padding: 40px;
             border-radius: 15px;
         }
         
-        intro-text {
+        .intro-text {
             background: rgba(0, 0, 0, 0.6);
             padding: 15px;
             border-radius: 10px;
