--- a/index.html
+++ b/index.html
@@ -50,13 +50,14 @@
         }
 
         .main-image {
-            width: 200px;
+            width: 250px;
             height: auto;
         }
 
         .small-image {
             width: 150px;
             height: auto;
+            border-radius: 10px;
         }
 
         audio {
@@ -88,9 +89,10 @@
     </style>
 </head>
 <body>
+
+ <h1>Come hear what's between Lesedii's ears</h1>
     
 <div class="header-banner">
-    <h1>Come hear what's between Lesedii's ears</h1>
     <div class="intro-text">
         <p>Lesedii is a 21-year-old, self-described "musical pixie."<br>
         Her love for the music she listens to creates an open channel for you to know what makes her day what it is.<br>
