--- a/index.html
+++ b/index.html
@@ -30,10 +30,12 @@
 
         h1, h2, h3, h4, h5, h6 {
             color: white;
+            text-shadow; 0 0 15px rgba(255, 255, 255, 0.8);
         }
 
         p {
             font-size: 20px;
+            text-shadow; 0 0 10px rgba(255, 255, 255, 0.6);
         }
 
         .todays-song {
