--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 <div class="todays-song">
     <div>
         <h4>TODAY'S SONG</h4>
-        <p>welp, todays song was interrupted by some stupid shii. So today's song is heavily inspired by that. Here's a song about healing, revenge and prosperity.</p>
+        <p>Welp, todays song was interrupted by some stupid shii. So today's song is heavily inspired by that. Here's a song about healing, revenge and prosperity.</p>
         <img src="DBD bash.jpeg" alt="cover art for darkest before dawn" class="main-image">
         <audio controls>
             <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Bashfortheworld%20-%20Darkest%20before%20Dawn.mp3" type="audio/mpeg">
