--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
     <div>
         <h4>TODAY'S SONG</h4>
         <p>Welp, todays song was interrupted by some stupid shii. So today's song is heavily inspired by that. Here's a song about healing, revenge and prosperity.</p>
-        <img src="DBD bash.jpeg" alt="cover art for darkest before dawn" class="main-image">
+        <img src="el manana.jpeg" alt="cover art for el manana" class="main-image">
         <audio controls>
-            <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Bashfortheworld%20-%20Darkest%20before%20Dawn.mp3" type="audio/mpeg">
+            <source src="" type="audio/mpeg">
         </audio>   
     </div>
 </div>
@@ -120,6 +120,14 @@
 <h4>Previous Songs</h4>
     
 <div class="song-log">
+        <div class="song-entry">
+            <h4>19.02.2025</h4>
+            <img src="DBD bash.jpeg" alt="cover art for darkest before dawn" class="small-image">
+            <audio controls>
+                <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Bashfortheworld%20-%20Darkest%20before%20Dawn.mp3" type="audio/mpeg">
+            </audio>
+        </div>
+                
         <div class="song-entry">
             <h4>18.02.2025</h4>
             <img src="emph4sis.jpeg" alt="cover art for do it" class="small-image">
