--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@
 <div class="todays-song">
     <div>
         <h4>TODAY'S SONG</h4>
-        <p>Welp, todays song was interrupted by some stupid shii. So today's song is heavily inspired by that. Here's a song about healing, revenge and prosperity.</p>
+        <p>You know that one feeling, when you really want him to f'ing man up and tell you that he likes you, but he never does<br>so you start considering the reality that maybe he just doesnt like you the way you like him<br>This song marks that moment for me. Thank God for the friends I have, I wouldn't give them up for anything in the world, he's probably not the one anyways</p>
         <img src="el manana.jpeg" alt="cover art for el manana" class="main-image">
         <audio controls>
-            <source src="" type="audio/mpeg">
+            <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Gorillaz%20-%20El%20Ma%C3%B1ana%20(Official%20Video).mp3" type="audio/mpeg">
         </audio>   
     </div>
 </div>
