--- a/index.html
+++ b/index.html
@@ -93,8 +93,14 @@
 <body>
 
  <h1>Come hear what's between Lesedii's ears</h1>
-    
+
 <div class="header-banner">
+    <nav>
+        <a href="index.html">Home Page</a>
+        <a href="about.html">About Me</a>
+        <a href="contact.html">Beam me UP</a>
+    </nav>
+    
     <div class="intro-text">
         <p>Lesedii is a 21-year-old, self-described "musical pixie."<br>
         Her love for the music she listens to creates an open channel for you to know what makes her day what it is.<br>
