--- a/contact.html
+++ b/contact.html
@@ -8,11 +8,11 @@
 
 <body>
   <header>
-    <h1>Beam Me UP</h1>
+    <h1>Beam Me UP!</h1>
     <nav>
       <a href="index.html">Home Page</a>
       <a href="about.html">About Me</a>
-      <a href="contact.html">Contact</a>
+      <a href="contact.html">Beam Me UP!</a>
     </nav>
   </header>
 
@@ -21,7 +21,7 @@
   </main>
 
   <footer>
-    <p>%copy; 2025 HiLesedii</p>
+    <p>%copy: 2025 HiLesedii</p>
   </footer>
 </body>
 </html>
