--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <nav>
       <a href="index.html">Home Page</a>
       <a href="about.html">About Me</a>
-      <a href="contact.html">Beam Me</a>
+      <a href="contact.html">Beam Me UP!</a>
     </nav>
   </header>
 
