--- a/contact.html
+++ b/contact.html
@@ -4,24 +4,93 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Beam Me UP!</title>
+  <style>
+    body {
+      background-color: #000;
+      color: #fff;
+      font-family: "Courier New", monospace;
+      text-align: center;
+    }
+
+    nav {
+      margin: 20px 0;
+    }
+
+    nav a {
+      color: #00ffcc;
+      text-decoration: none;
+      margin: 0 15px;
+      font-size: 18px;
+      font-weight: bold;
+    }
+
+    nav a:hover {
+      color: #ff6600;
+    }
+
+    h1 {
+      font-size: 36px;
+      margin-bottom: 10px;
+    }
+
+    main {
+      margin: 20px;
+      padding: 20px;
+    }
+
+    ul {
+      list-style: none;
+      padding: 0;
+    }
+
+    li {
+      margin: 10px 0;
+    }
+
+    a {
+      color: #00ffcc;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    a:hover {
+      color: #ff6600;
+    }
+
+    footer {
+      margin-top: 30px;
+      padding: 10px;
+      border-top: 1px solid #333;
+    }
+  </style>
 </head>
 
 <body>
   <header>
     <h1>Beam Me UP!</h1>
     <nav>
-      <a href="index.html">Home Page</a>
-      <a href="about.html">About Me</a>
-      <a href="contact.html">Beam Me UP!</a>
+      <a href="index.html">!Home Page!</a>
+      <a href="about.html">!About Me!</a>
+      <a href="contact.html">!Beam Me UP!</a>
     </nav>
   </header>
 
   <main>
-    <p>I have no idea why you'd wanna be concerned about contacting me instead of enjoying the vibe unless you're trying to let me know that my shii lit<br>You can email me at <a href="mailto:hellolesedii@outlook.com">hellolesedii@outlook.com</a>.</p>
+    <p>
+      I have no idea why you'd wanna be concerned about contacting me instead of enjoying the vibe unless you're trying to let me know that my shii lit.<br>
+      You can email me <a href="mailto:hellolesedii@outlook.com">here</a>.
+    </p>
+
+    <h2>Find Me Here:</h2>
+    <ul>
+      <li><a href="https://wa.me/26774227993" target="_blank">WhatsApp</a></li>
+      <li><a href="https://www.youtube.com/@HelloLesedii" target="_blank">YouTube</a></li>
+      <li><a href="https://www.instagram.com/succubus.coded/" target="_blank">Instagram</a></li>
+    </ul>
   </main>
 
   <footer>
-    <p>%copy: 2025 HiLesedii</p>
+    <p>&copy; 2025 HiLesedii</p>
   </footer>
 </body>
 </html>
