--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
     <div>
         <h4>TODAY'S SONG</h4>
         <p>You know that one feeling, when you really want him to f'ing man up and tell you that he likes you, but he never does<br>so you start considering the reality that maybe he just doesnt like you the way you like him<br>This song marks that moment for me. Thank God for the friends I have, I wouldn't give them up for anything in the world, he's probably not the one anyways</p>
-        <img src="el manana.jpeg" alt="cover art for el manana" class="main-image">
+        <img src="autumn.jpeg" alt="cover art for uptown coolin" class="main-image">
         <audio controls>
-            <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Gorillaz%20-%20El%20Ma%C3%B1ana%20(Official%20Video).mp3" type="audio/mpeg">
+            <source src="" type="audio/mpeg">
         </audio>   
     </div>
 </div>
@@ -127,6 +127,15 @@
 <h4>Previous Songs</h4>
     
 <div class="song-log">
+
+        <div class="song-entry">
+            <h4>20.02.2025</h4>
+            <img src="el manana.jpeg" alt="cover art for el manana" class="small-image">
+            <audio controls>
+                <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Gorillaz%20-%20El%20Ma%C3%B1ana%20(Official%20Video).mp3" type="audio/mpeg">
+            </audio>   
+        </div>
+    
         <div class="song-entry">
             <h4>19.02.2025</h4>
             <img src="DBD bash.jpeg" alt="cover art for darkest before dawn" class="small-image">
