--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
 <div class="todays-song">
     <div>
         <h4>TODAY'S SONG</h4>
-        <p>You know that one feeling, when you really want him to f'ing man up and tell you that he likes you, but he never does<br>so you start considering the reality that maybe he just doesnt like you the way you like him<br>This song marks that moment for me. Thank God for the friends I have, I wouldn't give them up for anything in the world, he's probably not the one anyways</p>
+        <p>Today I didn't go to school, flooding shii. To add icing to the cake, my family left the house, so for the first time in a while I was alone.<br>This song is a literal depiction of my solitude, maybe not the lyrics but the entire feel and vibe of the song.</p>
         <img src="autumn.jpeg" alt="cover art for uptown coolin" class="main-image">
         <audio controls>
-            <source src="" type="audio/mpeg">
+            <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Uptown%20Coolin!%20-%20Autumn!%20(Lyrics).mp3" type="audio/mpeg">
         </audio>   
     </div>
 </div>
