--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
  <h1>Come hear what's between Lesedii's ears</h1>
     
     <nav>
-        <a href="index.html">Home Page</a>
-        <a href="about.html">About Me</a>
-        <a href="contact.html">Beam me UP</a>
+        <a href="index.html">!Home Page!</a>
+        <a href="about.html">!About Me!</a>
+        <a href="contact.html">!Beam me UP!</a>
     </nav>
     
 <div class="header-banner">
