--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,7 @@
 
     header {
       background: url("header beam.png") no-repeat center center/cover;
+      height: 60%;
       padding: 80px 0;
     }
     
