--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 
     header {
       background: url("header beam.png") no-repeat center center/cover;
-      height: 60%;
+      height: 40%;
       padding: 80px 0;
     }
     
@@ -24,6 +24,7 @@
 
     body {
       background-color: #000;
+      text-shadow: 0 0 10px rgba(255, 255, 255, 0.8);
       color: #fff;
       font-family: "Courier New", monospace;
       text-align: center;
@@ -35,6 +36,7 @@
 
     nav a {
       color: #00ffcc;
+      text-shadow: 0 0 15px rgba(255, 255, 255, 0.9);
       text-decoration: none;
       margin: 0 15px;
       font-size: 18px;
@@ -48,6 +50,11 @@
     h1 {
       font-size: 36px;
       margin-bottom: 10px;
+      text-shadow: 0 0 20px rgba(255, 255, 255, 1);
+    }
+
+    h2 {
+      text-shadow: 0 0 20px rgba(255, 255, 255, 1);
     }
 
     main {
@@ -68,6 +75,10 @@
       color: #00ffcc;
       text-decoration: none;
       font-weight: bold;
+    }
+
+    footer p {
+      text-shadow: 0 0 8px rgba(255, 255, 255, 0.7);
     }
 
     a:hover {
