--- a/contact.html
+++ b/contact.html
@@ -48,6 +48,7 @@
     }
 
     h1 {
+      color: black;
       font-size: 36px;
       margin-bottom: 10px;
       text-shadow: 0 0 20px rgba(255, 255, 255, 1);
@@ -78,6 +79,7 @@
     }
 
     footer p {
+      color: black;
       text-shadow: 0 0 8px rgba(255, 255, 255, 0.7);
     }
 
