--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
 <div class="todays-song">
     <div>
         <h4>TODAY'S SONG</h4>
-        <p>Today I didn't go to school, flooding shii. To add icing to the cake, my family left the house, so for the first time in a while I was alone.<br>This song is a literal depiction of my solitude, maybe not the lyrics but the entire feel and vibe of the song.</p>
-        <img src="autumn.jpeg" alt="cover art for uptown coolin" class="main-image">
+        <p>Today I had the sudden urge to dance. i worked up a sweat to a number of songs but this one takes the cake.<br>It just sounds so cool</p>
+        <img src="nasa.jpeg" alt="cover art for nasa" class="main-image">
         <audio controls>
-            <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Uptown%20Coolin!%20-%20Autumn!%20(Lyrics).mp3" type="audio/mpeg">
+            <source src="" type="audio/mpeg">
         </audio>   
     </div>
 </div>
@@ -128,6 +128,13 @@
     
 <div class="song-log">
 
+        <div class="song-entry">
+            <h4>21.02.2025</h4>
+            <img src="autumn.jpeg" alt="cover art for uptown coolin" class="small-image">
+            <audio controls>
+                <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Uptown%20Coolin!%20-%20Autumn!%20(Lyrics).mp3" type="audio/mpeg">
+            </audio> 
+            
         <div class="song-entry">
             <h4>20.02.2025</h4>
             <img src="el manana.jpeg" alt="cover art for el manana" class="small-image">
