--- a/about.html
+++ b/about.html
@@ -4,30 +4,60 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About ME</title>
+  <style>
+    body {
+      background-color: black;
+      font-family: "Courier New", monospace;
+      color: white;
+      text-shadow: 0 0 5px white;
+      margin: 0;
+      padding: 0;
+      display: flex;
+    }
+    .content {
+      flex: 1;
+      padding: 20px;
+    }
+    .banner {
+      width: 300px;
+      background: url("about section.png") no-repeat center center/cover;
+      height: 100vh;
+    }
+    nav a {
+      color: cyan;
+      text-decoration: none;
+      margin-right: 15px;
+    }
+    nav a:hover {
+      text-shadow: 0 0 10px white;
+    }
+  </style>
 </head>
 
 <body>
-  <header>
-    <h1>About ME</h1>
-    <nav>
-      <a href="index.html">Home Page</a>
-      <a href="about.html">About Me</a>
-      <a href="contact.html">Beam Me UP!</a>
-    </nav>
-  </header>
+  <div class="content">
+    <header>
+      <h1>About ME</h1>
+      <nav>
+        <a href="index.html">!Home Page!</a>
+        <a href="about.html">!About Me!</a>
+        <a href="contact.html">!Beam Me UP!</a>
+      </nav>
+    </header>
 
-  <Main>
-    <p>Hey guys! My name is Lesedi Trinity Mojakgomo. I really love music. Wanna know why? Mainly because I found a way to express myself and straighten the bendy twisty channels of my mind.</p>
-    <p>Being that as it may, I made this website not only to help put my voice out into the world but to also create a space for anyone out there to also fall in love with music like I have</p>
-    <p>Except for Drake fans, yall must know I've been a hater since he released "Scorpion" CORNY!!</p>
-    <p>Walk with me as we go on an audio journey that not only depicts memories, feelings and moments but also makes you wanna Shazam dihh shii</p>
-    <p>Just remember to let em know who put you on</p>
-</Main>
+    <main>
+      <p>Hey guys! My name is Lesedi Trinity Mojakgomo. I really love music. Wanna know why? Mainly because I found a way to express myself and straighten the bendy twisty channels of my mind.</p>
+      <p>Being that as it may, I made this website not only to help put my voice out into the world but to also create a space for anyone out there to also fall in love with music like I have</p>
+      <p>Except for Drake fans, yall must know I've been a hater since he released "Scorpion" CORNY!!</p>
+      <p>Walk with me as we go on an audio journey that not only depicts memories, feelings and moments but also makes you wanna Shazam dihh shii</p>
+      <p>Just remember to let em know who put you on</p>
+    </main>
 
-<footer>
-  <p>&copy; 2025 HiLesedii</p>
-</footer>
-
+    <footer>
+      <p>&copy; 2025 HiLesedii</p>
+    </footer>
+  </div>
+  <div class="banner"></div>
 </body>
   
 </html>
