--- a/index.html
+++ b/index.html
@@ -78,10 +78,11 @@
         }
 
         .song-log {
-            display: flex;
+            display: grid;
+            grid-template-columns: repeat(5, 1fr);
             justify-content: center;
-            flex-wrap: wrap;
             gap: 40px;
+            padding: 20px;
         }
 
         .song-entry {
