--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
 <div class="todays-song">
     <div>
         <h4>TODAY'S SONG</h4>
-        <p>Today I had the sudden urge to dance. i worked up a sweat to a number of songs but this one takes the cake.<br>It just sounds so cool</p>
-        <img src="nasa.jpeg" alt="cover art for nasa" class="main-image">
+        <p>Today I had a "feeling" something, someway kinda cracked....This just might be a warning, that quiet possibly my depression may make it's come back<br>but obviously I can't say my life is terrible cause honestly, it's not. I can testify that currently my life is awesome, but...<br>something feels empty. Whether or not I'll be able to heal it depends on the next couple months until then, here's a song that feels like I do.</p>
+        <img src="offshore.jpeg" alt="cover art for touchin the ceiling" class="main-image">
         <audio controls>
-            <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Rvdical%20The%20Kid%20-%20NASA%20ft.%20Amaarae%20(AUDIO).mp3" type="audio/mpeg">
+            <source src="" type="audio/mpeg">
         </audio>   
     </div>
 </div>
@@ -128,6 +128,14 @@
 <h4>Previous Songs</h4>
     
 <div class="song-log">
+
+        <div class="song-entry">
+            <h4>22.02.2025</h4>
+            <img src="nasa.jpeg" alt="cover art for nasa" class="small-image">
+            <audio controls>
+                <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Rvdical%20The%20Kid%20-%20NASA%20ft.%20Amaarae%20(AUDIO).mp3" type="audio/mpeg">
+            </audio>
+        </div>    
 
         <div class="song-entry">
             <h4>21.02.2025</h4>
