--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
 <div class="todays-song">
     <div>
         <h4>TODAY'S SONG</h4>
-        <p>Today I had a "feeling" something, someway kinda cracked....This just might be a warning, that quiet possibly my depression may make it's come back<br>but obviously I can't say my life is terrible cause honestly, it's not. I can testify that currently my life is awesome, but...<br>something feels empty. Whether or not I'll be able to heal it depends on the next couple months until then, here's a song that feels like I do.</p>
-        <img src="offshore.jpeg" alt="cover art for touchin the ceiling" class="main-image">
+        <p>It's a sunday today, and sure ive been a lil off track with these daily gems, I'm just on time. Today's song is inspired by a message I needed to hear.<br>I've come to the realisation that I've made certain changes in my life that I expected the world from.<br>Forgetting that in this lifetime, there is nothing no one or something that could ever do to make me the person I want to be.<br>I am a powerhouse.</p>
+        <img src="saba.jpeg" alt="cover art for how to impress God" class="main-image">
         <audio controls>
-            <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Touchin%20The%20Ceiling.mp3" type="audio/mpeg">
+            <source src="" type="audio/mpeg">
         </audio>   
     </div>
 </div>
@@ -128,6 +128,14 @@
 <h4>Previous Songs</h4>
     
 <div class="song-log">
+
+        <div class="song-entry">
+            <h4>24.02.2025</h4>
+            <img src="offshore.jpeg" alt="cover art for touchin the ceiling" class="small-image">
+            <audio controls>
+                <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Touchin%20The%20Ceiling.mp3" type="audio/mpeg">
+            </audio>
+        </div>
 
         <div class="song-entry">
             <h4>22.02.2025</h4>
