--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
     }
 
     h1 {
-      color: black;
+      color: #ff0000;
       font-size: 36px;
       margin-bottom: 10px;
       text-shadow: 0 0 20px rgba(255, 255, 255, 1);
@@ -79,7 +79,7 @@
     }
 
     footer p {
-      color: black;
+      color: #ffffff;
       text-shadow: 0 0 8px rgba(255, 255, 255, 0.7);
     }
 
