--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
     }
 
     h1 {
-      color: #ff0000;
+      color: #e30000;
       font-size: 36px;
       margin-bottom: 10px;
       text-shadow: 0 0 20px rgba(255, 255, 255, 1);
