--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
 <div class="todays-song">
     <div>
         <h4>TODAY'S SONG</h4>
-        <p>It's a sunday today, and sure ive been a lil off track with these daily gems, I'm just on time. Today's song is inspired by a message I needed to hear.<br>I've come to the realisation that I've made certain changes in my life that I expected the world from.<br>Forgetting that in this lifetime, there is nothing no one or something that could ever do to make me the person I want to be.<br>I am a powerhouse.</p>
-        <img src="saba.jpeg" alt="cover art for how to impress God" class="main-image">
+        <p>Today's song was influenced by one of my friends, I remember when the album first came out and she heard that song for the first time<br>🤦‍♂️....eitherway I have no idea what she was thinking with song as today's song but I'm in total agreement of this chaotic energy.</p>
+        <img src="Tyler.jpeg" alt="cover art for thought I was dead" class="main-image">
         <audio controls>
-            <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Saba%20&%20No%20ID%20-%20How%20to%20Impress%20God.mp3" type="audio/mpeg">
+            <source src="" type="audio/mpeg">
         </audio>   
     </div>
 </div>
@@ -131,6 +131,14 @@
 
         <div class="song-entry">
             <h4>24.02.2025</h4>
+             <img src="saba.jpeg" alt="cover art for how to impress God" class="main-image">
+             <audio controls>
+                <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Saba%20&%20No%20ID%20-%20How%20to%20Impress%20God.mp3" type="audio/mpeg">
+             </audio> 
+        </div>
+
+        <div class="song-entry">
+            <h4>23.02.2025</h4>
             <img src="offshore.jpeg" alt="cover art for touchin the ceiling" class="small-image">
             <audio controls>
                 <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Touchin%20The%20Ceiling.mp3" type="audio/mpeg">
