--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <p>Today's song was influenced by one of my friends, I remember when the album first came out and she heard that song for the first time<br>🤦‍♂️....eitherway I have no idea what she was thinking with song as today's song but I'm in total agreement of this chaotic energy.</p>
         <img src="Tyler.jpeg" alt="cover art for thought I was dead" class="main-image">
         <audio controls>
-            <source src="" type="audio/mpeg">
+            <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Tyler,%20The%20Creator%20-%20Thought%20I%20Was%20Dead%20(Lyrics%20Video)%20ft.%20ScHoolboy%20Q,%20Santigold.mp3" type="audio/mpeg">
         </audio>   
     </div>
 </div>
