--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
         <div class="song-entry">
             <h4>24.02.2025</h4>
-             <img src="saba.jpeg" alt="cover art for how to impress God" class="main-image">
+             <img src="saba.jpeg" alt="cover art for how to impress God" class="small-image">
              <audio controls>
                 <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Saba%20&%20No%20ID%20-%20How%20to%20Impress%20God.mp3" type="audio/mpeg">
              </audio> 
