--- a/contact.html
+++ b/contact.html
@@ -5,98 +5,12 @@
   
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+  <link rel="stylesheet" href="style.css">
   <title>Beam Me UP!</title>
-  
-  <style>
-
-    header {
-      background: url("header beam.png") no-repeat center center/cover;
-      height: 40%;
-      padding: 80px 0;
-    }
-    
-    footer {
-      background: url("foot beam.png") no-repeat center center/cover;
-      height: 75%;
-      padding: 5px; 
-    }
-
-    body {
-      background-color: #000;
-      text-shadow: 0 0 10px rgba(255, 255, 255, 0.8);
-      color: #fff;
-      font-family: "Courier New", monospace;
-      text-align: center;
-    }
-
-    nav {
-      margin: 20px 0;
-    }
-
-    nav a {
-      color: #00ffcc;
-      text-shadow: 0 0 15px rgba(255, 255, 255, 0.9);
-      text-decoration: none;
-      margin: 0 15px;
-      font-size: 18px;
-      font-weight: bold;
-    }
-
-    nav a:hover {
-      color: #ff6600;
-    }
-
-    h1 {
-      color: #e30000;
-      font-size: 36px;
-      margin-bottom: 10px;
-      text-shadow: 0 0 20px rgba(255, 255, 255, 1);
-    }
-
-    h2 {
-      text-shadow: 0 0 20px rgba(255, 255, 255, 1);
-    }
-
-    main {
-      margin: 20px;
-      padding: 20px;
-    }
-
-    ul {
-      list-style: none;
-      padding: 0;
-    }
-
-    li {
-      margin: 10px 0;
-    }
-
-    a {
-      color: #00ffcc;
-      text-decoration: none;
-      font-weight: bold;
-    }
-
-    footer p {
-      color: #ffffff;
-      text-shadow: 0 0 8px rgba(255, 255, 255, 0.7);
-    }
-
-    a:hover {
-      color: #ff6600;
-    }
-
-    footer {
-      margin-top: 30px;
-      padding: 10px;
-      border-top: 1px solid #333;
-    }
-  </style>
   
 </head>
 
-<body>
+<body class="contact">
   
   <header>
     
