--- a/about.html
+++ b/about.html
@@ -4,37 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About ME</title>
-  <style>
-    body {
-      background-color: black;
-      font-family: "Courier New", monospace;
-      color: white;
-      text-shadow: 0 0 5px white;
-      margin: 0;
-      padding: 0;
-      display: flex;
-    }
-    .content {
-      flex: 1;
-      padding: 20px;
-    }
-    .banner {
-      width: 300px;
-      background: url("about section.png") no-repeat center center/cover;
-      height: 100vh;
-    }
-    nav a {
-      color: cyan;
-      text-decoration: none;
-      margin-right: 15px;
-    }
-    nav a:hover {
-      text-shadow: 0 0 10px white;
-    }
-  </style>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body>
+<body class="about">
   <div class="content">
     <header>
       <h1>About ME</h1>
