--- a/index.html
+++ b/index.html
@@ -129,6 +129,11 @@
     
 </div>
 
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+
+<script src="script.js"></script>
+
 <script>
     document.addEventListener("DOMContentLoaded", function () {
         const audioElements = document.querySelectorAll("audio");
