--- a/contact.html
+++ b/contact.html
@@ -48,6 +48,9 @@
     <p>&copy; 2025 HiLesedii</p>
     
   </footer>
+
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
   
 </body>
   
