--- a/about.html
+++ b/about.html
@@ -12,11 +12,22 @@
   <div class="content">
     <header>
       <h1>About ME</h1>
-      <nav>
-        <a href="index.html">!Home Page!</a>
-        <a href="about.html">!About Me!</a>
-        <a href="contact.html">!Beam Me UP!</a>
-      </nav>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+        <a class="navbar-brand" href="index.html">Lesedii's Song of the Day</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="about.html">About Me</a></li>
+                <li class="nav-item"><a class="nav-link" href="contact.html">Beam Me UP!</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
     </header>
 
     <main>
