--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 <div class="todays-song">
     <div>
         <h4>TODAY'S SONG</h4>
-        <p>Today's song was influenced by one of my friends, I remember when the album first came out and she heard that song for the first time<br>🤦‍♂️....eitherway I have no idea what she was thinking with song as today's song but I'm in total agreement of this chaotic energy.</p>
-        <img src="Tyler.jpeg" alt="cover art for thought I was dead" class="main-image">
+        <p>Today has forced me out of retirement, a lot of things happened with the closest people with my life and someway, somehow, this song<br>just gives me a sense of grounding and realisation of where I am in life. I won't lie, some shii is just heavy.</p>
+        <img src="mood.jpeg" alt="cover art for mood" class="main-image">
         <audio controls>
-            <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Tyler,%20The%20Creator%20-%20Thought%20I%20Was%20Dead%20(Lyrics%20Video)%20ft.%20ScHoolboy%20Q,%20Santigold.mp3" type="audio/mpeg">
+            <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Jessie%20Reyez%20-%20Mood%20(lyrics).mp3" type="audio/mpeg">
         </audio>   
     </div>
 </div>
@@ -46,6 +46,14 @@
 <h4>Previous Songs</h4>
     
 <div class="song-log">
+
+        <div class="song-entry">
+            <h4>25.02.2025-13.02.2025</h4>
+            <img src="Tyler.jpeg" alt="cover art for thought I was dead" class="small-image">
+            <audio controls>
+                <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Tyler,%20The%20Creator%20-%20Thought%20I%20Was%20Dead%20(Lyrics%20Video)%20ft.%20ScHoolboy%20Q,%20Santigold.mp3" type="audio/mpeg">
+            </audio>  
+        </div>
 
         <div class="song-entry">
             <h4>24.02.2025</h4>
