--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="about.html">About Me</a></li>
                         <li class="nav-item"><a class="nav-link" href="contact.html">Beam me UP!</a></li>
+                        <li class="nav-item"><a class="nav-link" href="calendar.html">Catch Up</a></li>
                     </ul>
                 </div>
             </div>
