--- a/calendar.html
+++ b/calendar.html
@@ -37,7 +37,7 @@
         <audio id="audio-player" controls></audio>
     </div>
 
-<script src="script.js"></script>
+<script src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/script.js"></script>
     
 </body>
 </html>
