--- a/calendar.html
+++ b/calendar.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Windows 4 Dark Calendar</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -37,7 +38,7 @@
         <audio id="audio-player" controls></audio>
     </div>
 
-<script src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/script.js"></script>
+<script src="script.js"></script>
     
 </body>
 </html>
