--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
-<script src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/script.js"></script>
+<script src="script.js" defer></script>
     
 </body>
 </html>
