--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 <div class="todays-song">
     <div>
         <h4>TODAY'S SONG</h4>
-        <p>Today has forced me out of retirement, a lot of things happened with the closest people with my life and someway, somehow, this song<br>just gives me a sense of grounding and realisation of where I am in life. I won't lie, some shii is just heavy.</p>
-        <img src="mood.jpeg" alt="cover art for mood" class="main-image">
+        <p>I beg, forgive my inability to update, truth is..........<br>Im batman<br>nahh but how I've been feeling lately is periodical, so bare with the short term change of theme<br>we're rocking "song of the week" till further notice.</p>
+        <img src="charge it.jpg" alt="cover art for charge it" class="main-image">
         <audio controls>
-            <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Jessie%20Reyez%20-%20Mood%20(lyrics).mp3" type="audio/mpeg">
+            <source src="" type="audio/mpeg">
         </audio>   
     </div>
 </div>
@@ -58,8 +58,16 @@
     
 <div class="song-log">
 
+        <div calss="song-entry">
+            <h4>13.03.2025-18.03.2025</h4>
+            <img src="mood.jpeg" alt="cover art for mood" class="small-image">
+            <audio controls>
+                <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Jessie%20Reyez%20-%20Mood%20(lyrics).mp3" type="audio/mpeg">
+            </audio>
+        </div>
+
         <div class="song-entry">
-            <h4>25.02.2025-13.02.2025</h4>
+            <h4>25.02.2025-13.03.2025</h4>
             <img src="Tyler.jpeg" alt="cover art for thought I was dead" class="small-image">
             <audio controls>
                 <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Tyler,%20The%20Creator%20-%20Thought%20I%20Was%20Dead%20(Lyrics%20Video)%20ft.%20ScHoolboy%20Q,%20Santigold.mp3" type="audio/mpeg">
