--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <p>I beg, forgive my inability to update, truth is..........<br>Im batman<br>nahh but how I've been feeling lately is periodical, so bare with the short term change of theme<br>we're rocking "song of the week" till further notice.</p>
         <img src="charge it.jpg" alt="cover art for charge it" class="main-image">
         <audio controls>
-            <source src="" type="audio/mpeg">
+            <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/ENNY%20-%20Charge%20It%20Remix%20(ft.%20Smino)%20%5BAnime%20Visualizer%5D.mp3" type="audio/mpeg">
         </audio>   
     </div>
 </div>
