--- a/calendar.html
+++ b/calendar.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>Catch up</title>
+    <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
     
@@ -114,6 +114,8 @@
             </div>
         </div>
     </div>
+
+<script src="script.js" defer></script>
     
 </body>
 </html>
