--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <p>Today's song came from an album that held my hand during the worst era of my life<br>Still thinking about those days puts tears in my eyes<br>This song symbolises a silent strength I wish I didn't have....bless</p>
         <img src="vince staples.jpg" alt="cover art for aye" class="main-image">
         <audio controls>
-            <source src="https://youtu.be/8vkfST6TSHU" type="audio/mpeg">
+            <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Aye%20(Free%20The%20Homies)%20-%20Vince%20Staples.mp3" type="audio/mpeg">
         </audio>   
     </div>
 </div>
