--- a/feedback.html
+++ b/feedback.html
@@ -6,7 +6,7 @@ Last name:<br>
   <input type="text"=lastname><br>
   <input type="radio" name="gender" value="male" checked> Male<br>
   <input type="radio" name="gender" value="female"> Female<br>
-  <input type="radio" name="gender" value="other"> Other
+  <input type="radio" name="gender" value="other"> Other<br>
 <input type="submit" value="submit">
 </form>
 </html>
