--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+b<!DOCTYPE html>
 <html lang="en">
     
 <head>
@@ -46,10 +46,10 @@
 <div class="todays-song">
     <div>
         <h4>TODAY'S SONG</h4>
-        <p>Today's song came from an album that held my hand during the worst era of my life<br>Still thinking about those days puts tears in my eyes<br>This song symbolises a silent strength I wish I didn't have....bless</p>
-        <img src="vince staples.jpg" alt="cover art for aye" class="main-image">
+        <p>Today's song isn't inspired by anything actually, only because I dicovered<br>it today...Enjoy</p>
+        <img src="norentals.jpg" alt="cover art for no rentals" class="main-image">
         <audio controls>
-            <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Aye%20(Free%20The%20Homies)%20-%20Vince%20Staples.mp3" type="audio/mpeg">
+            <source src="" type="audio/mpeg">
         </audio>   
     </div>
 </div>
@@ -57,6 +57,14 @@
 <h4>Previous Songs</h4>
     
 <div class="song-log">
+
+        <div class="song-entry">
+            <h4>19.03.2025</h4>
+            <img src="vince staples.jpg" alt="cover art for aye" class="small-image">
+            <audio controls>
+                <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Aye%20(Free%20The%20Homies)%20-%20Vince%20Staples.mp3" type="audio/mpeg">
+            </audio>  
+        </div>
 
         <div class="song-entry">
             <h4>18.03.2025</h4>
